# inbound-outbound-calls

./: .env.example  .gitignore  INTEGRATION_COMPLETE.txt  PROJECT.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  scratch_debug.py  test_dashboard_provider_integration.py  test_suite_500.py
dashboard/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
deploy/: DEPLOY.md  deploy.sh  diigoo-api.service  diigoo-dashboard.service  diigoo-worker.service  install_services.sh  setup.sh
scripts/: FINAL_LATENCY_SOLUTION.md  LATENCY_OPTIMIZATION_PLAN.md  SENTENCE_STREAMING_IMPLEMENTATION.md  apply_latency_optimizations.py  benchmark_llama70b_latency.py  benchmark_p50_latency.py  check_cerebras_models.py  check_kb.py  check_latency_config.py  check_llm_model.py  config_backup_2026-06-14.json  deep_integration_test.py  e2e_test.py  fix_latency_config.py  fix_llm_model.py  flow_test.py  gen_content.py  grounding_test.py  ingest_kb.py  kb_smoke.py  lang_switch_test.py  measure_prompt.py  persona_backup_2026-06-14b.json  pipeline_smoke.py  probe_azure_india.py  probe_bedrock.py  probe_cartesia.py  probe_cerebras.py  probe_gemini_flash.py  probe_sarvam.py  quality_test.py  race_latency_test.py  set_voice.py  setup_watchdog_task.ps1  test_azure_latency_benchmark.py  test_azure_llm.py  test_cartesia_live.py  test_cartesia_websocket.py  test_cerebras_large_models.py  test_cerebras_models.py  (+15 more)
src/: __init__.py  agent.py  audio.py  backchannel.py  cache.py  cancellation.py  clock.py  config.py  content.py  (+20 more)
(+145 files in other folders)
