[project]
name = "ai-voice-calls"
version = "0.1.0"
description = "Production-grade realtime multilingual (Telugu/Hindi/English) AI voice calling system on LiveKit + Sarvam + OpenAI + Vobiz SIP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.0.0",
    "livekit-api>=0.8.0",
    "livekit-plugins-sarvam>=0.1.0",
    "livekit-plugins-openai>=0.10.0",
    "openai>=1.40.0",
    "livekit-plugins-silero>=0.7.0",
    "livekit-plugins-turn-detector>=0.4.0",
    "livekit-plugins-noise-cancellation>=0.2.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Imports are `src.*` resolved from the project root (runtime uses
# pythonpath=["."]). Tell the type checker to use the same root so it
# doesn't mis-infer `src/` as the import root.
[tool.pyright]
extraPaths = ["."]
include = ["src", "scripts", "tests"]

[tool.ruff]
exclude = [".venv"]
